CMake: Add USE_EXTERNAL_LIBS option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,30 +9,31 @@ set (CMAKE_TRY_COMPILE_CONFIGURATION ${CMAKE_BUILD_TYPE})
 
 project (openturns)
 
-option (USE_CUBA                     "Use Cuba library"                                                      ON)
-option (USE_TBB                      "Use Intel Threading Building Blocks library for multithreading"        ON)
+option (USE_EXTERNAL_LIBS            "Use external libs"                                                     ON)
+option (USE_CUBA                     "Use Cuba library"                                                      ${USE_EXTERNAL_LIBS})
+option (USE_TBB                      "Use Intel Threading Building Blocks library for multithreading"        ${USE_EXTERNAL_LIBS})
 option (USE_HMAT                     "Use HMat library (enforces GPL license)"                               OFF)
-option (USE_MUPARSER                 "Use muParser library"                                                  ON)
+option (USE_MUPARSER                 "Use muParser library"                                                  ${USE_EXTERNAL_LIBS})
 option (USE_EXPRTK                   "Use ExprTK library"                                                    ON)
-option (USE_LIBXML2                  "Use LibXml2 for XML support"                                           ON)
-option (USE_HDF5                     "Use HDF5 for high volume storage"                                      ON)
+option (USE_LIBXML2                  "Use LibXml2 for XML support"                                           ${USE_EXTERNAL_LIBS})
+option (USE_HDF5                     "Use HDF5 for high volume storage"                                      ${USE_EXTERNAL_LIBS})
 option (USE_BOOST                    "Use Boost for distribution computation"                                ON)
-option (USE_MPFR                     "Use MPFR for real valued special functions computation"                ON)
-option (USE_MPC                      "Use MPC for complex valued special functions computation"              ON)
+option (USE_MPFR                     "Use MPFR for real valued special functions computation"                ${USE_EXTERNAL_LIBS})
+option (USE_MPC                      "Use MPC for complex valued special functions computation"              ${USE_EXTERNAL_LIBS})
 option (USE_SPHINX                   "Use sphinx for documentation"                                          OFF)
-option (USE_DOXYGEN                  "Use Doxygen for API documentation"                                     ON)
-option (USE_NLOPT                    "Use NLopt for additional optimization algorithms"                      ON)
-option (USE_CERES                    "Use Ceres Solver for additional optimization algorithms"               ON)
-option (USE_CMINPACK                 "Use CMinpack for additional optimization algorithms"                   ON)
-option (USE_DLIB                     "Use dlib for additional optimization algorithms"                       ON)
-option (USE_IPOPT                    "Use Ipopt for nonlinear optimization"                                  ON)
-option (USE_BONMIN                   "Use Bonmin for MINLP problems"                                         ON)
-option (USE_PAGMO                    "Use Pagmo for multi-objective optimization"                            ON)
-option (USE_SPECTRA                  "Use Spectra for eigenvalues computation"                               ON)
-option (USE_PRIMESIEVE               "Use primesieve for prime numbers generation"                           ON)
-option (USE_OPENMP                   "Use OpenMP to disable threading"                                       ON)
-option (USE_OPENBLAS                 "Use OpenBLAS to disable threading"                                     ON)
-option (USE_NANOFLANN                "Use nanoflann for Nearest Neighbor search"                             ON)
+option (USE_DOXYGEN                  "Use Doxygen for API documentation"                                     ${USE_EXTERNAL_LIBS})
+option (USE_NLOPT                    "Use NLopt for additional optimization algorithms"                      ${USE_EXTERNAL_LIBS})
+option (USE_CERES                    "Use Ceres Solver for additional optimization algorithms"               ${USE_EXTERNAL_LIBS})
+option (USE_CMINPACK                 "Use CMinpack for additional optimization algorithms"                   ${USE_EXTERNAL_LIBS})
+option (USE_DLIB                     "Use dlib for additional optimization algorithms"                       ${USE_EXTERNAL_LIBS})
+option (USE_IPOPT                    "Use Ipopt for nonlinear optimization"                                  ${USE_EXTERNAL_LIBS})
+option (USE_BONMIN                   "Use Bonmin for MINLP problems"                                         ${USE_EXTERNAL_LIBS})
+option (USE_PAGMO                    "Use Pagmo for multi-objective optimization"                            ${USE_EXTERNAL_LIBS})
+option (USE_SPECTRA                  "Use Spectra for eigenvalues computation"                               ${USE_EXTERNAL_LIBS})
+option (USE_PRIMESIEVE               "Use primesieve for prime numbers generation"                           ${USE_EXTERNAL_LIBS})
+option (USE_OPENMP                   "Use OpenMP to disable threading"                                       ${USE_EXTERNAL_LIBS})
+option (USE_OPENBLAS                 "Use OpenBLAS to disable threading"                                     ${USE_EXTERNAL_LIBS})
+option (USE_NANOFLANN                "Use nanoflann for Nearest Neighbor search"                             ${USE_EXTERNAL_LIBS})
 
 option (BUILD_PYTHON                 "Build the python module for the library"                               ON)
 option (BUILD_SHARED_LIBS            "Build shared libraries"                                                ON)
