--- a/lib/src/Base/Optim/CMakeLists.txt
+++ b/lib/src/Base/Optim/CMakeLists.txt
@@ -31,6 +31,7 @@ ot_add_source_file (OptimizationAlgorithm.cxx)
 ot_add_source_file (OptimizationAlgorithmImplementation.cxx)
 ot_add_source_file (NearestPointProblem.cxx)
 ot_add_source_file (LeastSquaresProblem.cxx)
+ot_add_source_file (LinearProblem.cxx)
 ot_add_source_file (OptimizationResult.cxx)
 ot_add_source_file (SQP.cxx)
 ot_add_source_file (algotnc.c)
@@ -54,6 +55,7 @@ ot_install_header_file (OptimizationProblem.hxx)
 ot_install_header_file (OptimizationProblemImplementation.hxx)
 ot_install_header_file (NearestPointProblem.hxx)
 ot_install_header_file (LeastSquaresProblem.hxx)
+ot_install_header_file (LinearProblem.hxx)
 ot_install_header_file (OptimizationAlgorithm.hxx)
 ot_install_header_file (OptimizationAlgorithmImplementation.hxx)
 ot_install_header_file (OptimizationResult.hxx)
