--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -302,6 +302,7 @@ endif ()
 if (highs_FOUND)
   ot_pyinstallcheck_test (HiGHS_std IGNOREOUT)
 endif ()
+ot_pyinstallcheck_test (LinearProblem_std IGNOREOUT)
 ot_pyinstallcheck_test (MultiStart_std IGNOREOUT)
 if (NLopt_FOUND)
   ot_pyinstallcheck_test (NLopt_std IGNOREOUT)
