--- a/python/src/ProbabilitySimulationAlgorithm_doc.i.in
+++ b/python/src/ProbabilitySimulationAlgorithm_doc.i.in
@@ -17,6 +17,8 @@ experiment : :class:`~openturns.WeightedExperiment`
 convergenceStrategy : :class:`~openturns.HistoryStrategy`, optional
     Storage strategy used to store the values of the probability estimator and
     its variance during the simulation algorithm.
+    
+    By default, the :class:`~openturns.Full` strategy is used.
 
 Notes
 -----
@@ -124,6 +126,9 @@ where:
   identically distributed and following the probability density function
   :math:`f_{\uY}`.
 
+The convergence graph of the probability estimator is plotted from the stored history of the values (estimator values and its variance)
+according to the given strategy. To get the sample of values (estimator, variance), use the method :meth:`~openturns.ProbabilitySimulationAlgorithm.getConvergenceStrategy` and
+then the method :meth:`~openturns.HistoryStrategy.getSample()`.
 
 See also
 --------
