--- a/python/src/MemoizeFunction_doc.i.in
+++ b/python/src/MemoizeFunction_doc.i.in
@@ -17,12 +17,14 @@ Notes
 -----
 
 When the function passed as argument is a :class:`~openturns.MemoizeFunction`,
-its input and output history are copied into current instance.
+its input and output history are copied into the current instance.
 This allows one to retrieve this history from a :class:`~openturns.Function`
 object which is in fact a :class:`~openturns.MemoizeFunction`.
 Thus, if you create a :class:`~openturns.MemoizeFunction` from an unknown
 :class:`~openturns.Function`, it is better to call :meth:`clearHistory`.
 The cache size is initialized by the value of the :class:`~openturns.ResourceMap` `Cache-MaxSize` entry.
+
+By default, the cache mechanism and the history mechanism ar enabled.
 
 See also
 --------
