--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1081,6 +1081,9 @@ if (SPHINX_FOUND)
   if (NOT dlib_FOUND)
     set (SPHINX_GALLERY_IGNORE_PATTERN "${SPHINX_GALLERY_IGNORE_PATTERN}|(optimization_dlib)")
   endif ()
+  if (NOT highs_FOUND)
+    set (SPHINX_GALLERY_IGNORE_PATTERN "${SPHINX_GALLERY_IGNORE_PATTERN}|(optimization_highs)")
+  endif ()
   if (NOT Pagmo_FOUND)
     set(SPHINX_GALLERY_IGNORE_PATTERN "${SPHINX_GALLERY_IGNORE_PATTERN}|(optimization_pagmo)")
   endif ()
