--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -870,6 +870,9 @@ if (MATPLOTLIB_FOUND)
   if (NOT dlib_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_optimization_dlib PROPERTIES DISABLED TRUE)
   endif ()
+  if (NOT highs_FOUND)
+    set_tests_properties (pyinstallcheck_example_plot_optimization_highs PROPERTIES DISABLED TRUE)
+  endif ()
   if (NOT HMAT_FOUND)
     set_tests_properties (pyinstallcheck_example_plot_gpr_cantilever_beam_hmat PROPERTIES DISABLED TRUE)
     set_tests_properties (pyinstallcheck_example_plot_gaussian_process_covariance_hmat PROPERTIES DISABLED TRUE)
